--- a/index.html
+++ b/index.html
@@ -68,26 +68,7 @@
     <!-- 返回顶部结束 -->
     <!-- 背景 -->
     <script type="text/javascript" src="/js/canvas-particle.js"></script>
-    <script type="text/javascript">
-		window.onload = function() {
-		    //配置
-		    var config = {
-		        vx: 4,	//小球x轴速度,正为右，负为左
-		        vy: 4,	//小球y轴速度
-		        height: 2,	//小球高宽，其实为正方形，所以不宜太大
-		        width: 2,
-		        count: 200,		//点个数
-		        color: "238,247,242", 	//点颜色
-		        stroke: "238,247,242", 		//线条颜色
-		        dist: 6000, 	//点吸附距离
-		        e_dist: 20000, 	//鼠标吸附加速距离
-		        max_conn: 10 	//点到点最大连接数
-		    }
-
-		    //调用
-		    CanvasParticle(config);
-		}
-	</script>
+    <script type="text/javascript" src="/js/canvas-funtion.js"></script>
 </body>
 
 </html>
