--- a/oneblog.html
+++ b/oneblog.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+    <div id="mydiv">
     <!-- 头部开始 -->
     <header>
         <div class="header">
@@ -88,6 +89,10 @@
         </div>
     </footer>
     <!-- 底部结束 -->
+    </div>
+    <!-- 背景 -->
+    <script type="text/javascript" src="/js/canvas-particle.js"></script>
+    <script type="text/javascript" src="/js/canvas-funtion.js"></script>
 </body>
 
 </html>
