--- a/twoblog.html
+++ b/twoblog.html
@@ -26,6 +26,7 @@
     </style>
 </head>
 <body>
+    <div id="mydiv">
     <!-- 头部开始 -->
     <header>
         <div class="header">
@@ -73,5 +74,9 @@
         </div>
     </footer>
     <!-- 底部结束 -->
+        </div>
+    <!-- 背景 -->
+    <script type="text/javascript" src="/js/canvas-particle.js"></script>
+    <script type="text/javascript" src="/js/canvas-funtion.js"></script>
 </body>
 </html>
