--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
         <footer>
             <div class="footer" id="me">
                 <div class="contact">
-                    <a href="#" target="_blank" class="qq"><img src="/images/QQ.png" alt="QQ"></a>
-                    <a href="#" target="_blank"><img src="/images/wechat.png" alt="微信"></a>
+                    <a href="contact.html" target="_blank" class="qq"><img src="/images/QQ.png" alt="QQ"></a>
+                    <a href="contact.html" target="_blank"><img src="/images/wechat.png" alt="微信"></a>
                     <a href="https://github.com/xiaozhi1010" target="_blank"><img src="/images/github.png"
                             alt="github"></a>
                     <a href="https://space.bilibili.com/92088144" target="_blank"><img src="/images/bilibili-fill.png"
