--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             <div class="twoblog"><a href="twoblog.html" target="blank"><br>Visio 2016 64位安装与下载</a>
                 <p>Microsoft Visio2016是一款由微软公司提供的专业绘图软件，可以用来制作流程图、网络图、工程设计图。</p>
             </div>
+            <div class="threeblog"><a href="threeblog.html" target="_blank"><br>Android扫描全能王（修改版，安装即用）</a>
+                    <p>1.可以直接用，无需自己破解<br>
+                        2.绑定自己的手机号后还可以同步</p>
+                </div>
         </div>
     </main>
     <!-- 主体结束 -->
